More data added to csv

--- a/notebooks/Misc.ipynb
+++ b/notebooks/Misc.ipynb
@@ -54,6 +54,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_department(mod_code):\n",
+    "    output = ''\n",
+    "    numbers = '1234567890'\n",
+    "    for char in mod_code:\n",
+    "        if char not in numbers:\n",
+    "            output += char\n",
+    "        else:\n",
+    "            break\n",
+    "    return output\n",
+    "\n",
+    "def get_level(mod_code):\n",
+    "    for char in mod_code:\n",
+    "        if char in '1234567890':\n",
+    "            return char"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mod_codes1 = []\n",
+    "mod_codes2 = []\n",
+    "level = []\n",
+    "for mod in zip(mappings['NUS Module 1'],mappings['NUS Module 2']):\n",
+    "    try:\n",
+    "        mod_codes1.append(get_department(mod[0]))\n",
+    "    except:\n",
+    "        mod_codes1.append(np.nan)\n",
+    "        \n",
+    "    try:\n",
+    "        mod_codes2.append(get_department(mod[1]))\n",
+    "    except:\n",
+    "        mod_codes2.append(np.nan)\n",
+    "        \n",
+    "    try:\n",
+    "        level.append(get_level(mod[0]))\n",
+    "    except:\n",
+    "        level.append(np.nan)\n",
+    "\n",
+    "mappings['Department 1'] = mod_codes1\n",
+    "mappings['Department 2'] = mod_codes2\n",
+    "mappings['Level'] = level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mappings.to_csv('../static/Module-Mappings.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('UD', 'AR')\n",
+      "('MNO', 'BXT')\n",
+      "('MNO', 'BXT')\n",
+      "('BSP', 'MNO')\n",
+      "('DSC', 'MNO')\n",
+      "('BSP', 'MNO')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tup in zip(mod_codes1, mod_codes2):\n",
+    "    if (tup[0] != tup[1]) and (tup[0] is not np.nan) and (tup[1] is not np.nan):\n",
+    "        print(tup)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
