Removed level selector from departments

--- a/static/Create Algo_module_codes.ipynb
+++ b/static/Create Algo_module_codes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Location_type': 'regions',\n",
+       " 'Location': ['Europe'],\n",
+       " 'Departments': {'MA': 2, 'CS': 3}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_dict1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +425,7 @@
        "     'PU Module Code': 'MS&E285'}}}}}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,404 +438,6 @@
     "o = dict_merger(o1, o2)\n",
     "o = dict_merger(o,o3)\n",
     "o"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Faculty</th>\n",
-       "      <th>Partner University</th>\n",
-       "      <th>PU Module 1</th>\n",
-       "      <th>PU Module 1 Title</th>\n",
-       "      <th>PU Mod1 Credits</th>\n",
-       "      <th>PU Module 2</th>\n",
-       "      <th>PU Module 2 Title</th>\n",
-       "      <th>PU Mod2 Credits</th>\n",
-       "      <th>NUS Module 1</th>\n",
-       "      <th>NUS Module 1 Title</th>\n",
-       "      <th>NUS Mod1 Credits</th>\n",
-       "      <th>NUS Module 2</th>\n",
-       "      <th>NUS Module 2 Title</th>\n",
-       "      <th>NUS Mod2 Credits</th>\n",
-       "      <th>Pre Approved?</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Continent</th>\n",
-       "      <th>Department 1</th>\n",
-       "      <th>Department 2</th>\n",
-       "      <th>Level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>274</th>\n",
-       "      <td>NUS Business School</td>\n",
-       "      <td>Arizona State University</td>\n",
-       "      <td>FIN361</td>\n",
-       "      <td>ADVANCED MANAGERIAL FINANCE</td>\n",
-       "      <td>3</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>FIN3701</td>\n",
-       "      <td>Corporate Finance</td>\n",
-       "      <td>4</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>FIN</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>275</th>\n",
-       "      <td>Faculty of Science</td>\n",
-       "      <td>Arizona State University</td>\n",
-       "      <td>BIO 331</td>\n",
-       "      <td>Animal Behavior</td>\n",
-       "      <td>3</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>LSM3267</td>\n",
-       "      <td>Behavioural Biology</td>\n",
-       "      <td>4</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>LSM</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>276</th>\n",
-       "      <td>Faculty of Science</td>\n",
-       "      <td>Arizona State University</td>\n",
-       "      <td>BIO 360</td>\n",
-       "      <td>Animal Physiology</td>\n",
-       "      <td>3</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>LSM3212</td>\n",
-       "      <td>Human Physio:Cardiopulmon Syst</td>\n",
-       "      <td>4</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>LSM</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>277</th>\n",
-       "      <td>Faculty of Science</td>\n",
-       "      <td>Arizona State University</td>\n",
-       "      <td>BIO 302</td>\n",
-       "      <td>Cancer - Mother of All Diseases</td>\n",
-       "      <td>3</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>LSM3991</td>\n",
-       "      <td>Exchange Enrichment Module</td>\n",
-       "      <td>4</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>LSM</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>278</th>\n",
-       "      <td>Faculty of Science</td>\n",
-       "      <td>Arizona State University</td>\n",
-       "      <td>BIO 461</td>\n",
-       "      <td>Comparative Animal Physiology</td>\n",
-       "      <td>3</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>LSM3262</td>\n",
-       "      <td>Comparative Animal Physiology</td>\n",
-       "      <td>4</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>LSM</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12991</th>\n",
-       "      <td>NUS Business School</td>\n",
-       "      <td>York University</td>\n",
-       "      <td>FEKG11</td>\n",
-       "      <td>STRATEGIC ORGANIZING</td>\n",
-       "      <td>6</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>MNO3761Z</td>\n",
-       "      <td>Topics in L&amp;HCM</td>\n",
-       "      <td>4</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>MNO</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12992</th>\n",
-       "      <td>NUS Business School</td>\n",
-       "      <td>York University</td>\n",
-       "      <td>ORGS4350</td>\n",
-       "      <td>THE MANAGEMENT OF CHANGE</td>\n",
-       "      <td>3</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>MNO3711</td>\n",
-       "      <td>Managing Change</td>\n",
-       "      <td>4</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>MNO</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12993</th>\n",
-       "      <td>NUS Business School</td>\n",
-       "      <td>York University</td>\n",
-       "      <td>MKTG3420</td>\n",
-       "      <td>TOURISM SPORT &amp; LEISURE MARKETING</td>\n",
-       "      <td>3</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>MKT3422Y</td>\n",
-       "      <td>TOPICS IN MKTG:SEL TOPICS 2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>MKT</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12994</th>\n",
-       "      <td>NUS Business School</td>\n",
-       "      <td>York University</td>\n",
-       "      <td>MKTG4320</td>\n",
-       "      <td>TOURISM SPORT &amp; LEISURE MARKETING</td>\n",
-       "      <td>3</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>MKT3422Z</td>\n",
-       "      <td>Topics in Marketing</td>\n",
-       "      <td>4</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>MKT</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12995</th>\n",
-       "      <td>Faculty of Engineering</td>\n",
-       "      <td>York University</td>\n",
-       "      <td>LE/MECH4502</td>\n",
-       "      <td>VIBRATIONS AND ACTUATORS</td>\n",
-       "      <td>3</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>ME3112</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>4</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>ME</td>\n",
-       "      <td>INVALID</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3996 rows × 20 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      Faculty        Partner University  PU Module 1  \\\n",
-       "274       NUS Business School  Arizona State University       FIN361   \n",
-       "275        Faculty of Science  Arizona State University      BIO 331   \n",
-       "276        Faculty of Science  Arizona State University      BIO 360   \n",
-       "277        Faculty of Science  Arizona State University      BIO 302   \n",
-       "278        Faculty of Science  Arizona State University      BIO 461   \n",
-       "...                       ...                       ...          ...   \n",
-       "12991     NUS Business School           York University       FEKG11   \n",
-       "12992     NUS Business School           York University     ORGS4350   \n",
-       "12993     NUS Business School           York University     MKTG3420   \n",
-       "12994     NUS Business School           York University     MKTG4320   \n",
-       "12995  Faculty of Engineering           York University  LE/MECH4502   \n",
-       "\n",
-       "                       PU Module 1 Title PU Mod1 Credits PU Module 2  \\\n",
-       "274          ADVANCED MANAGERIAL FINANCE               3     INVALID   \n",
-       "275                      Animal Behavior               3     INVALID   \n",
-       "276                    Animal Physiology               3     INVALID   \n",
-       "277      Cancer - Mother of All Diseases               3     INVALID   \n",
-       "278        Comparative Animal Physiology               3     INVALID   \n",
-       "...                                  ...             ...         ...   \n",
-       "12991               STRATEGIC ORGANIZING               6     INVALID   \n",
-       "12992           THE MANAGEMENT OF CHANGE               3     INVALID   \n",
-       "12993  TOURISM SPORT & LEISURE MARKETING               3     INVALID   \n",
-       "12994  TOURISM SPORT & LEISURE MARKETING               3     INVALID   \n",
-       "12995           VIBRATIONS AND ACTUATORS               3     INVALID   \n",
-       "\n",
-       "      PU Module 2 Title PU Mod2 Credits NUS Module 1  \\\n",
-       "274             INVALID         INVALID      FIN3701   \n",
-       "275             INVALID         INVALID      LSM3267   \n",
-       "276             INVALID         INVALID      LSM3212   \n",
-       "277             INVALID         INVALID      LSM3991   \n",
-       "278             INVALID         INVALID      LSM3262   \n",
-       "...                 ...             ...          ...   \n",
-       "12991           INVALID         INVALID     MNO3761Z   \n",
-       "12992           INVALID         INVALID      MNO3711   \n",
-       "12993           INVALID         INVALID     MKT3422Y   \n",
-       "12994           INVALID         INVALID     MKT3422Z   \n",
-       "12995           INVALID         INVALID       ME3112   \n",
-       "\n",
-       "                   NUS Module 1 Title NUS Mod1 Credits NUS Module 2  \\\n",
-       "274                 Corporate Finance                4      INVALID   \n",
-       "275               Behavioural Biology                4      INVALID   \n",
-       "276    Human Physio:Cardiopulmon Syst                4      INVALID   \n",
-       "277        Exchange Enrichment Module                4      INVALID   \n",
-       "278     Comparative Animal Physiology                4      INVALID   \n",
-       "...                               ...              ...          ...   \n",
-       "12991                 Topics in L&HCM                4      INVALID   \n",
-       "12992                 Managing Change                4      INVALID   \n",
-       "12993     TOPICS IN MKTG:SEL TOPICS 2                4      INVALID   \n",
-       "12994             Topics in Marketing                4      INVALID   \n",
-       "12995                         INVALID                4      INVALID   \n",
-       "\n",
-       "      NUS Module 2 Title NUS Mod2 Credits Pre Approved?  \\\n",
-       "274              INVALID          INVALID             Y   \n",
-       "275              INVALID          INVALID             Y   \n",
-       "276              INVALID          INVALID             Y   \n",
-       "277              INVALID          INVALID             Y   \n",
-       "278              INVALID          INVALID             Y   \n",
-       "...                  ...              ...           ...   \n",
-       "12991            INVALID          INVALID             Y   \n",
-       "12992            INVALID          INVALID             Y   \n",
-       "12993            INVALID          INVALID             Y   \n",
-       "12994            INVALID          INVALID             Y   \n",
-       "12995            INVALID          INVALID             Y   \n",
-       "\n",
-       "                        Country Continent Department 1 Department 2 Level  \n",
-       "274    United States of America  Americas          FIN      INVALID     3  \n",
-       "275    United States of America  Americas          LSM      INVALID     3  \n",
-       "276    United States of America  Americas          LSM      INVALID     3  \n",
-       "277    United States of America  Americas          LSM      INVALID     3  \n",
-       "278    United States of America  Americas          LSM      INVALID     3  \n",
-       "...                         ...       ...          ...          ...   ...  \n",
-       "12991                    Canada  Americas          MNO      INVALID     3  \n",
-       "12992                    Canada  Americas          MNO      INVALID     3  \n",
-       "12993                    Canada  Americas          MKT      INVALID     3  \n",
-       "12994                    Canada  Americas          MKT      INVALID     3  \n",
-       "12995                    Canada  Americas           ME      INVALID     3  \n",
-       "\n",
-       "[3996 rows x 20 columns]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "areas"
    ]
   },
   {
